# ModularMinsk

./: .clang-format  .clang-tidy  .cmake-format.json  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.c
.github/workflows/: ci.yml
include/minsk/analysis/syntax/: kind.h  token.h
include/minsk/runtime/: object.h
include/minsk/util/: strings.h
modules/annotate/include/annotate/: annotate.h
modules/ansi_esc/include/ansi_esc/: ansi_esc.h
modules/embed/source/: main.c
modules/hash/include/hash/: hash.h
modules/hash/source/: hash.c
modules/mc/source/: main.c
modules/minsk/include/minsk/code_analysis/: compilation.h  diagnostic.h  evaluation_result.h  evaluator.h  symbol_table.h  variable_symbol.h
modules/minsk/include/minsk/code_analysis/syntax/: assignment_expression.h  binary_expression.h  expression.h  facts.h  kind.h  lexer.h  literal_expression.h  name_expression.h  node.h  parenthesized_expression.h  parser.h  token.h  tree.h  unary_expression.h
modules/minsk/include/minsk/code_analysis/text/: diagnostic.h  diagnostic_bag.h  diagnostics.h  span.h
modules/minsk/include/minsk/runtime/: object.h
modules/minsk/include/minsk/runtime/object/: object.h
modules/minsk/internal_include/minsk/code_analysis/: evaluator.h
modules/minsk/internal_include/minsk/code_analysis/binding/: assignment_expression.h  binary_expression.h  binary_operator.h  binary_operator_kind.h  binder.h  expression.h  kind.h  literal_expression.h  node.h  unary_expression.h  unary_operator.h  unary_operator_kind.h  variable_expression.h
modules/minsk/internal_include/minsk/code_analysis/syntax/: facts.h  lexer.h  parser.h
modules/minsk/internal_include/minsk_private/code_analysis/: evaluator.h
modules/minsk/internal_include/minsk_private/code_analysis/binding/: assignment_expression.h  binary_expression.h  binary_operator.h  binary_operator_kind.h  binder.h  expression.h  kind.h  literal_expression.h  node.h  unary_expression.h  unary_operator.h  unary_operator_kind.h  variable_expression.h
modules/minsk/internal_include/minsk_private/code_analysis/syntax/: facts.h  lexer.h  parser.h
modules/minsk/source/code_analysis/: compilation.c  diagnostics.c  evaluator.c  symbol_table.c  variable_symbol.c
modules/minsk/source/code_analysis/binding/: assignment_expression.c  binary_expression.c  binary_operator.c  binder.c  expression.c  literal_expression.c  node.c  unary_expression.c  unary_operator.c  variable_expression.c
modules/minsk/source/code_analysis/syntax/: assignment_expression.c  binary_expression.c  expression.c  facts.c  kind.c  lexer.c  literal_expression.c  name_expression.c  node.c  parenthesized_expression.c  parser.c  token.c  tree.c  unary_expression.c
modules/minsk/source/code_analysis/text/: diagnostic.c  diagnostic_bag.c  diagnostics.c  span.c
modules/minsk/source/runtime/: object.c
modules/minsk/source/runtime/object/: object.c
modules/minsk_test/include/minsk_test/code_analysis/syntax/: facts_tests.h  lexer_tests.h  parser_tests.h
modules/minsk_test/source/: main.c
modules/minsk_test/source/code_analysis/syntax/: facts_tests.c  lexer_tests.c  parser_tests.c
modules/nonstd/code_analysis/syntax/: lexer.c
modules/nonstd/include/nonstd/: asprintf.h  ctype.h  qsort.h  strdup.h  strpbrk.h  strspn.h  strtok.h
modules/nonstd/source/: asprintf.c  ctype.c  qsort.c  strdup.c  strpbrk.c  strspn.c  strtok.c
modules/phyto_collections/include/phyto/collections/: callbacks.h  deque.h  dynamic_array.h
modules/phyto_hash/include/phyto/hash/: hash.h
modules/phyto_hash/source/: hash.c
modules/phyto_io/include/phyto/io/: io.h
modules/phyto_io/source/: io.c
modules/phyto_span/include/phyto/span/: span.h
modules/phyto_string/include/phyto/string/: string.h
modules/phyto_string/source/: string.c
modules/span/include/span/: span.h
modules/span/source/: span.c
modules/string/include/string/: string.h
modules/string/source/: string.c
modules/string_test/source/: main.c
modules/test/include/test/: test.h
modules/vec/include/vec/: vec.h
modules/vec/source/: vec.c
src/: minsk.c
src/analysis/syntax/: kind.c
src/runtime/: object.c
src/util/: strings.c
